--- a/OLHA_SO.html
+++ b/OLHA_SO.html
@@ -28,3 +28,5 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates dol
 </a>
 
 <a href="atributos.html">banana</a>
+<a href="Bonamana/atributos.html">Pega a visão</a>
+<a href="Bonamana/Prazer/atributos.html">Viu?</a>
