--- a/OLHA_SO.html
+++ b/OLHA_SO.html
@@ -30,3 +30,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates dol
 <a href="atributos.html">banana</a>
 <a href="Bonamana/atributos.html">Pega a visão</a>
 <a href="Bonamana/Prazer/atributos.html">Viu?</a>
+
+<a href="hyperlinks.html">arquivo na pasta anterior</a>
+<br>
+<a href="./urls-caminhos.html">arquivo no diretório raiz</a>
+<br>
+<a href="urls-caminhos.html">arquivo na mesma pasta</a>
+<br>
+<a href="outros/conteudo-a-element.html">arquivo na pasta outros, que está na pasta anterior</a>
